	- Remove capability to read the deprecated "pack" file format used at IRIS DMC.
	- Remove MS_ISVALIDBLANK macro, was only used for notification of archaic structure.
	- Add JSON handling for extra headers.
	- Add crc32c.c for CRC-32C calculation, new ms_crc32c().
	- Set msr->swapflag bit flags to indicate if header and payload need swapping.
	- Added mstl3_readbuffer()

2017.283: 2.19.5
	- msr_endtime(): calculate correct end time during a leap second.
	- Fixed signedness comparison warning.

2017.125:
	- Export LM_SIZEOF_OFF_T on Windows via libmseed.def.

2017.118: 2.19.4
	- Add global LM_SIZEOF_OFF_T variable that is set to the size of
	the off_t data type as determined at compile time.

2017.075: 2.19.3
	- Add missing public, global symbols to libmseed.map, thanks
	to Elliott Sales de Andrade.

2017.061: 2.19.2
	- Provide install target in Makefile thanks to by Pierre Duperray.
	- Deprecate dynamic build target, the shared target will now build
	shared or dynamic (Darwin) libraries depending on the system.
	- Limit symbols exported in shared libraries to public interfaces
	as defined in libmseed.map, thanks again to Pierre Duperray.
	- Allow tests to work on Darwin with dynamic libraries.

2017.060: 2.19.1
	- Derive versioning of shared/dynamic library from canonical version
	defined as LIBMSEED_VERSION in libmseed.h.
	- Apply updates to more standardized use of NAME and typos in man pages,
	submitted by Pierre Duperray.

2017.053: 2.19
	- Incorporate lmplatform.h details into libmseed.h for improved usage.
	All that is needed is the static/shared/dynamic library and libmseed.h.
	- Avoid undefined left shifts of signed values that would go out of
	range and specify the types of some constants.

2016.290:
	- Remove dependency on ntwin32.mak for Windows nmake makefiles, now
	building works in plain MSVC development environments.

2016.286: 2.18
	- Remove limitation on sample rate before calling ms_genfactmult()