@@ -27,6 +27,8 @@ V3 changes:
 	- Add crc32c.c for CRC-32C calculation, new ms_crc32c().
 	- Set msr->swapflag bit flags to indicate if header and payload need swapping.
 	- Added mstl3_readbuffer()
+	- Add global libmseed_memory that contains user-definable function pointers to
+	malloc(), realloc() and free().
 
 2017.283: 2.19.5
 	- msr_endtime(): calculate correct end time during a leap second.
